--- a/BloggerWay.MVC/Views/Article/Search.cshtml
+++ b/BloggerWay.MVC/Views/Article/Search.cshtml
@@ -1,83 +1,106 @@
 ﻿@using System.Text.RegularExpressions
-@model BloggerWay.Entities.Dtos.ArticleListDto
+@model BloggerWay.MVC.Models.ArticleSearchViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    ViewBag.Title = "Anasayfa";
+    ViewBag.Title = "Arama Sonuçları";
     Layout = "_Layout";
     Regex regex = new Regex("<[^>]*>");
 }
-
-<div style="color:black" class="col-md-8">
+<div class="col-md-8">
 
     <h1 class="my-4">
-        Son Paylaşılan Makaleler
+        Arama Sonuçları
     </h1>
+    <form>
+        <div class="form-row">
+            <input type="hidden" id="keyword" value="@Model.Keyword" />
+            <input type="hidden" id="current-page" value="@Model.ArticleListDto.CurrentPage" />
+            <div class="form-group col-md-6">
+                <select class="form-control" id="select-page-size">
+                    <option selected="@(Model.ArticleListDto.PageSize == 5 ? "selected" : null)" value="5">5</option>
+                    <option selected="@(Model.ArticleListDto.PageSize == 10 ? "selected" : null)" value="10">10</option>
+                    <option selected="@(Model.ArticleListDto.PageSize == 20 ? "selected" : null)" value="20">20</option>
+                </select>
+            </div>
+            <div class="form-group col-md-6">
+                <select class="form-control" id="select-is-ascending">
+                    <option selected="@(Model.ArticleListDto.IsAscending == false ? "selected" : null)" value="false">En Yeni</option>
+                    <option selected="@(Model.ArticleListDto.IsAscending ? "selected" : null)" value="true">En Eski</option>
+                </select>
+            </div>
+        </div>
+    </form>
 
-    @foreach (var article in Model.Articles)
-   {
-       <!-- Blog Post -->
-       <div class="card mb-4">
-           <img class="card-img-top" src="~/img/@article.Thumbnail" alt="@article.Title">
-           <div class="card-body">
-               <h2 class="card-title">@article.Title</h2>
-               <p class="card-text">
-                   @{
-                       article.Content = regex.Replace(article.Content, "");
-                   }
-                   @(article.Content.Length>250 ? article.Content.Substring(0,250) : article.Content)
-               </p>
-               <a style="background-color:#c47941" href="/Article/Detail?articleId=@article.Id"  class="btn btn-primary"><p style="color:white">Daha fazla oku &rarr;</p></a>
-
-           </div>
-           <div style="background-color:#487a7a"class="card-footer text-muted">
-                <p style="color:white">  @article.User.UserName tarafından @article.Date tarihinde paylaşıldı.</p>
-           </div>
-       </div>
-   }
+    @foreach (var article in Model.ArticleListDto.Articles)
+    {
+        <!-- Blog Post -->
+        <div class="card mb-4">
+            <img class="card-img-top" src="~/img/@article.Thumbnail" alt="@article.Title">
+            <div class="card-body">
+                <h2 class="card-title">@article.Title</h2>
+                <p class="card-text">
+                    @{
+                        article.Content = regex.Replace(article.Content, "");
+                    }
+                    @(article.Content.Length>250 ? article.Content.Substring(0,250) : article.Content)
+                </p>
+                <a asp-controller="Article" asp-action="Detail" asp-route-articleId="@article.Id" class="btn btn-primary">Daha fazla oku &rarr;</a>
+            </div>
+            <div class="card-footer text-muted">
+                @article.User.UserName tarafından @article.Date tarihinde paylaşıldı.
+            </div>
+        </div>
+    }
 
     <!-- Pagination -->
-<ul class="pagination justify-content-center mb-4">
-    @{
-                    @if (Model.ShowPrevious)
-                    {
-        @if (Model.CategoryId != null)
-        {
-<li class="page-item">
-    <a class="page-link" href="?~/currentPage=@(Model.CurrentPage-1)" href="?~/categoryId=@Model.CategoryId.Value">&larr; Eski</a>
-</li> }
-                else
-                {
-<li class="page-item">
-    <a class="page-link" href="?currentPage=@(Model.CurrentPage-1)">&larr; Eski</a>
-</li>}
-
-                    }
-                                @for (var i = 1; i <= Model.TotalPages; i++)
-                                {
-                    <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                        @if (Model.CategoryId != null)
-                        {
-        <a class="page-link" href="?currentPage=@i" asp-route-categoryId="@Model.CategoryId.Value">@i</a> }
-                        else
-                        {
-
-        <a class="page-link" href="?currentPage=@i">@i</a>}
-                    </li>}
-        @if (Model.ShowNext)
-        {
-            @if (Model.CategoryId != null)
+    <ul class="pagination justify-content-center mb-4">
+        @{
+            @if (Model.ArticleListDto.ShowPrevious)
             {
                 <li class="page-item">
-                    <a class="page-link" href="?currentPage=@(Model.CurrentPage+1)" href="?categoryId=@Model.CategoryId.Value">Yeni &rarr;</a>
-                </li> }
-            else
+                        <a class="page-link" asp-route-currentPage="@(Model.ArticleListDto.CurrentPage-1)" asp-route-isAscending="@Model.ArticleListDto.IsAscending" asp-route-pageSize="@Model.ArticleListDto.PageSize" asp-route-keyword="@Model.Keyword">Önceki</a>
+                    </li>
+
+            }
+            @for (var i = 1; i <= Model.ArticleListDto.TotalPages; i++)
+            {
+                <li class="page-item @(i == Model.ArticleListDto.CurrentPage ? "active" : "")">
+                    <a class="page-link" asp-route-currentPage="@i" asp-route-isAscending="@Model.ArticleListDto.IsAscending" asp-route-pageSize="@Model.ArticleListDto.PageSize" asp-route-keyword="@Model.Keyword">@i</a>
+                </li>
+            }
+            @if (Model.ArticleListDto.ShowNext)
             {
                 <li class="page-item">
-                    <a class="page-link" href="?currentPage=@(Model.CurrentPage+1)">Yeni &rarr;</a>
-                </li>}
-
+                        <a class="page-link" asp-route-currentPage="@(Model.ArticleListDto.CurrentPage+1)" asp-route-isAscending="@Model.ArticleListDto.IsAscending" asp-route-pageSize="@Model.ArticleListDto.PageSize" asp-route-keyword="@Model.Keyword">Sonraki</a>
+                    </li>
+            }
         }
-    }
-</ul>
+    </ul>
 
 </div>
+    @section Scripts {
+        <script>
+            $(document).ready(function() {
+
+                $(function() {
+
+                    const selectPageSize = $('#select-page-size');
+                    const selectIsAscending = $('#select-is-ascending');
+                    const keyword = $('#keyword').val();
+                    const currentPage = $('#current-page').val();
+                    const keywordQuery = keyword !== null ? `&keyword=${keyword}` : null;
+
+                    selectPageSize.on('change',
+                        function() {
+                            window.location =
+                                `/?pageSize=${selectPageSize.val()}&isAscending=${selectIsAscending.val()}${keywordQuery != null ? keywordQuery : null}&currentPage=${currentPage}`;
+                        });
+                    selectIsAscending.on('change',
+                        function() {
+                            window.location =
+                                `/?pageSize=${selectPageSize.val()}&isAscending=${selectIsAscending.val()}${keywordQuery != null ? keywordQuery : null}&currentPage=${currentPage}`;
+                        });
+                });
+            });
+        </script>
+    }
