--- a/BloggerWay.MVC/Views/Shared/Components/RightSideBar/Default.cshtml
+++ b/BloggerWay.MVC/Views/Shared/Components/RightSideBar/Default.cshtml
@@ -1,44 +1,49 @@
 ﻿@using BloggerWay.Entities.Concrete
 @model BloggerWay.MVC.Models.RightSideBarViewModel
+<div class="col-md-12">
 
-<div class="row-cols-md-6">
-
-    
-    <div style="background-color:whitesmoke"  class="card my-auto">
-        <h5 style="color:black" class="card-header">Arama</h5>
+    <!-- Search Widget -->
+    <div class="card my-4">
+        <h5 class="card-header">Arama</h5>
         <div class="card-body">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Aramak istenen kelime...">
-                <span class="input-group-append ">
-                    <button style="background-color:#c47941"  class="btn btn-info" type="button"><p style="color:white">Ara!</p></button>
-                </span>
-            </div>
+            <form asp-controller="Article" asp-action="Search" method="get">
+                <div class="input-group">
+                    <input type="text" class="form-control" name="keyword" placeholder="Aramak istediğiniz anahtar kelime...">
+                    <span class="input-group-append">
+                        <button class="btn btn-secondary" type="submit">Ara!</button>
+                    </span>
+                </div>
+            </form>
         </div>
     </div>
-</div>        
 
-
-    <div style="background-color:whitesmoke" class="widget widget-catgs my-4">
-              <ul style="color:black"class="catgs-links">
-                            
-                        </ul>
-        <h3 class="widget-title">Kategoriler</h3>
-    <br />
-        <ul style="color:white"class="catgs-links">
-        <li style="background-color:white"><a style="color:black"  asp-controller="Home" asp-action="Index">Hepsi</a></li>
-            @foreach (var category in Model.Categories)
-            {
-               <li class="list-group-item">
-                                <a a style="color:black" asp-controller="Home" asp-action="Index" asp-route-categoryId="@category.Id">@category.Name</a>
+    <!-- Categories Widget -->
+    <div class="card my-4">
+        <h5 class="card-header">Kategoriler</h5>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <a asp-controller="Home" asp-action="Index">Hepsi</a>
+                        </li>
+                        @foreach (var category in Model.Categories)
+                        {
+                            <li class="list-group-item">
+                                <a asp-controller="Home" asp-action="Index" asp-route-categoryId="@category.Id">@category.Name</a>
                             </li>
-            }
-        </ul>
+                        }
+                    </ul>
+                </div>
+            </div>
+
+        </div>
     </div>
 
     <!-- Side Widget -->
-    <div style="background-color:whitesmoke" class="widget widget-catgs my-4">
-        <h5  class="widget-title">En Çok Okunan Makaleler</h5>
-        <div style="background-color: black"class="catgs-links">
+    <div class="card my-4">
+        <h5 class="card-header">En Çok Okunan Makaleler</h5>
+        <div class="card-body">
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="list-group">
@@ -46,14 +51,14 @@
                         {
                             if (i%2==0)
                             {
-                     <li style="background-color: whitesmoke" class="list-group-item list-group-item-primary">
-                                    <a style="color:black" asp-controller="Article" asp-action="Detail" asp-route-articleId="@Model.Articles[i].Id">@Model.Articles[i].Title</a>
+                                <li class="list-group-item list-group-item-primary">
+                                    <a asp-controller="Article" asp-action="Detail" asp-route-articleId="@Model.Articles[i].Id">@Model.Articles[i].Title</a>
                                </li>
                             }
                             else
                             {
-                             <li style="background-color: whitesmoke" class="list-group-item list-group-item-info">
-                                    <a style="color:#c47941" asp-controller="Article" asp-action="Detail" asp-route-articleId="@Model.Articles[i].Id">@Model.Articles[i].Title</a>
+                                <li class="list-group-item list-group-item-info">
+                                    <a asp-controller="Article" asp-action="Detail" asp-route-articleId="@Model.Articles[i].Id">@Model.Articles[i].Title</a>
                                 </li>
                             }
                         }
@@ -64,4 +69,4 @@
         </div>
     </div>
 
-
+</div>
