--- a/BloggerWay.MVC/Views/Shared/_AboutLayout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_AboutLayout.cshtml
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>@ViewBag.Title | BloggerWay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Programcılar ve Yazılımcılar için Türkçe Kaynak, Rehber ve İçerikler">
-    <meta name="author" content="BloggerWay">
+    <meta name="description" content="@ViewBag.Description">
+    <meta   name="author" content="@ViewBag.Author">
+    <meta   name="keywords" content="@ViewBag.Tags">
+
 
     <link rel="stylesheet" type="text/css" href="~/blog/css/animate.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/bootstrap.min.css">
@@ -16,8 +18,12 @@
     <link rel="stylesheet" type="text/css" href="~/blog/css/style.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/responsive.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/color.css">
+    <link rel="stylesheet" type="text/css" href="~/blog/css/site.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" crossorigin="anonymous" />
+
+      
+
 </head>
 <body>
 
@@ -26,26 +32,26 @@
             <div class="container">
                 <div class="top-bar">
            
-                    <nav>
+                  <nav>
                         <ul>
-                            <li><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
-                            <li><a asp-controller="Home" asp-action="About">Hakkımızda</a></li>
+                            <li ><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
+                             <li><a asp-controller="Home" asp-action="About">Hakkımızda</a></li>
                         </ul>
                     </nav>
-
                     <div class="clearfix"></div>
                 </div>
                 <div class="bottom-header">
                     <div class="container">
                         <div class="logo">
-                            <h2><a style="color:darkslategrey" asp-controller="Home" asp-action="Index">BloggerWay</a></h2>
+                            <h2 ><a style="color:darkslategrey" asp-controller="Home" asp-action="Index">BloggerWay</a></h2>
                         </div>
                     </div>
                 </div>
             </div>
         </header>
 
-  
+
+
 
 
         <section class="main-content pb-0">
@@ -55,7 +61,7 @@
                     <div class="col-lg-4">
                         <div class="sidebar">
                            
-                            @await Component.InvokeAsync("RightSideBar");
+                    
 
 
                         </div>
@@ -66,11 +72,11 @@
 
 
 
-        <footer style="background-color:darkslategrey">
+        <footer  style="background-color:darkslategrey">
             <div class="container">
-                <div  class="footer-content">
+                <div class="footer-content">
                     <div class="row">
-                        <div  class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="ft-logo">
                                 <h1><a asp-controller="Home" asp-action="Index">BloggerWay</a></h1>
                             </div>
@@ -90,7 +96,7 @@
 
         <section class="bottom-strip">
             <div class="container">
-                <p style="color:aliceblue">©2022 BloggerWay Tüm Hakları Saklıdır.</p>
+                <p style="color:aliceblue">©2022 BloggerWay. Tüm Hakları Saklıdır.</p>
             </div>
         </section>
 
@@ -112,9 +118,8 @@
     <script src="~/blog/js/bootstrap.min.js"></script>
     <script src="~/blog/js/lib/slick/slick.js"></script>
     <script src="~/blog/js/script.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
 
-    @await RenderSectionAsync("Scripts",false)
-
+     @await RenderSectionAsync("Scripts",false)
 </body>
 </html>
