--- a/BloggerWay.MVC/Views/Shared/_Layout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                     <div class="row">
                         <div  class="col-lg-4 col-md-6 col-sm-6">
                             <div class="ft-logo">
-                                <h1><a asp-controller="Home" asp-action="Index">BloggerWay</a></h1>
+                                <h1><a asp-controller="Home" asp-action="Index">@websiteInfo.MenuTitle</a></h1>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
