--- a/BloggerWay.MVC/Areas/Admin/Views/Shared/Components/AdminMenu/Default.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Shared/Components/AdminMenu/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BloggerWay.MVC.Areas.Admin.Models.UserWithRolesViewModel
-<div id="layoutSidenav_nav">
-    <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+<div  id="layoutSidenav_nav">
+    <nav class="sb-sidenav accordion sb-sidenav-dark" style="background-color:#182539" id="sidenavAccordion">
         <div class="sb-sidenav-menu">
             <div class="nav">
                 <div class="sb-sidenav-menu-heading">MENÜ</div>
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </div>
-        <div class="sb-sidenav-footer">
+        <div style="background-color:#182539" class="sb-sidenav-footer">
             <div class="small">Giriş Yapan Kullanıcı:</div>
            @Model.User.UserName
         </div>
