--- a/BloggerWay.MVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <link href="~/AdminLTE/css/site.css" rel="stylesheet"/>
     </head>
     <body class="sb-nav-fixed">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <nav  class="sb-topnav navbar navbar-expand navbar-dark  "style="background-color:#182539">
             <a class="navbar-brand" asp-area="Admin" asp-controller="Home">Admin Paneli</a>
             <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
@@ -27,7 +27,7 @@
             <!-- Navbar-->
    @await Component.InvokeAsync("UserMenu")
         </nav>
-        <div id="layoutSidenav">
+        <div  id="layoutSidenav">
             @await Component.InvokeAsync("AdminMenu")
 
                     
